fixed spelling mistake in CSS for videocard component, added nav functionality

--- a/src/components/videocard/videoCard-style.css
+++ b/src/components/videocard/videoCard-style.css
@@ -10,10 +10,17 @@
 	transform: scale(1.09);
 }
 
-.vidoeCard > img {
+.videoCard > img {
 	height: 300px;
 	object-fit: contain;
 	width: 500px;
+}
+
+.videoCard__stats {
+	display: none;
+}
+.videoCard:hover > .videoCard__stats {
+	display: inline;
 }
 
 .videoCard > h2 {
