--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 .app {
-	width: 100vw;
-	background-image: linear-gradient(to right, #051421, #042727);
+	max-width: 100vw;
+	margin-left: auto;
+	margin-right: auto;
 }
