--- a/src/components/nav/nav-style.css
+++ b/src/components/nav/nav-style.css
@@ -3,7 +3,8 @@
 	color: white;
 	overflow-x: scroll;
 	padding: 10px;
-	padding-left: 40px;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
