--- a/src/components/header/header-style.css
+++ b/src/components/header/header-style.css
@@ -1,7 +1,7 @@
 .header {
 	color: white;
 	display: flex;
-	padding: 20px;
+	padding: 2em;
 	align-items: center;
 	justify-content: space-between;
 	overflow-x: scroll;
@@ -26,7 +26,7 @@
 }
 
 .header__icon > .MuiSvgIcon-root {
-	font-size: 30px;
+	font-size: 3rem;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -41,7 +41,7 @@
 .header__icon > p {
 	display: none;
 	text-transform: uppercase;
-	letter-spacing: 3px;
+	letter-spacing: 0.3em;
 	margin-left: auto;
 	margin-right: auto;
 	font-size: small;
